--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,6 +34,7 @@ abstract_target 'Expo Go' do
       'expo-dev-menu-interface',
       'expo-dev-launcher',
       'expo-dev-client',
+      'expo-image',
     ],
     includeTests: true,
     flags: {
